# sagittarius

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  module.modulemap  vcpkg-configuration.json  vcpkg.json
content/: App.qml  Main.qml
content/components/: AppNav.qml  Profiles.qml
content/macos/sources/: toolbar.cpp  toolbar.h
content/macos/toolbar/: MacToolGlobal.qml  MacToolbarLeft.qml  MacToolbarRight.qml
content/pages/: Home.qml
content/pages/files/: FilesDetail.qml  FilesPage.qml
content/pages/images/: Images.qml  ImagesPage.qml
content/pages/notes/: Editor.qml  NotesPage.qml
content/pages/password/: PasswordPage.qml
content/pages/uuid/: UUIDPage.qml
content/sources/: file.cpp  file.h  location.cpp  location.h  markdown.cpp
proxima/: main.cpp
proxima/macos/: checkeredwindow.cpp  checkeredwindow.h  fibonacci.cpp  fibonacci.h  fibonacci.swift  macwindow.h  macwindow.mm
proxima/services/: FolderService.cpp  PictureProvider.cpp  PictureProvider.h  SyncService.cpp  SyncService.h  location_service.cpp  location_service.h
proxima/services/sqlite/: sqlite.cpp  sqlite.h
proxima/services/threads/: SyncThread.cpp  SyncThread.h
proxima/tests/: cases.cpp  cases.h
proxima/tests/cases/: cases.c  cases.cpp  cases.h
proxima/tests/files/: file.cpp  file.h
proxima/tests/sqlite/: sqlite.cpp  sqlite.h
proxima/windows/: CMakeProjectDWM.cpp  CMakeProjectDWM.h
